--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,7 +36,7 @@
     <!-- owl carousel -->
     <link rel="stylesheet" href="{{ "/assets/css/normalize.css" | prepend: site.baseurl | replace: '//', '/' }}">
     <link rel="stylesheet" href="{{ "/assets/css/dashboard.css" | prepend: site.baseurl | replace: '//', '/' }}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ "/assets/css/bootstrap.min-5.3.3.css" | prepend: site.baseurl | replace: '//', '/' }}">
     <link rel="stylesheet" href="{{ "/assets/css/owl_carousel/owl.carousel.css" | prepend: site.baseurl | replace: '//', '/' }}">
     <link rel="stylesheet" href="{{ "/assets/css/owl_carousel/owl.theme.default.css" | prepend: site.baseurl | replace: '//', '/' }}">
     <link rel="stylesheet" href="{{ "/assets/css/prod.css" | prepend: site.baseurl | replace: '//', '/' }}">
