Nofollow en enlace de política de cookies, créditos y políticas de privacidad

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -23,10 +23,10 @@
               {% endfor %}
             </li>
             <li class="centrarTexto">
-              <a href="/politica-de-cookies">Politica de cookies</a>
-             <a href="/politica-de-privacidad">Política de privacidad</a>
+              <a href="/politica-de-cookies" rel="nofollow">Politica de cookies</a>
+             <a href="/politica-de-privacidad" rel="nofollow">Política de privacidad</a>
              <!--span class="statistics__entry-quantity"-->
-             <a href="/credits">Créditos</a>
+             <a href="/credits" rel="nofollow">Créditos</a>
              <!--/span-->
              <hr>
             </li>
