Actualización de redundancia de etiqueta en aria label

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,7 +7,7 @@ _data/navigation.yml, alli se inovan las variables  -->
         <li itemprop="name" class="nav__item nav__item--isActive">
           <a itemprop="url" class="nav__link focus--box-shadow"
             role="menuitem"
-            aria-label="Home" href="{{ page.link | relative_url }}" title="{{ page.name }}">{{ page.name }}
+            aria-label="Página de Home" href="{{ page.link | relative_url }}" title="{{ page.name }}">{{ page.name }}
             {{ page.imagen}}
           </a>
         </li>
@@ -15,7 +15,7 @@ _data/navigation.yml, alli se inovan las variables  -->
         <li itemprop="name" class="nav__item">
           <a itemprop="url" class="nav__link focus--box-shadow fondoNav"
             role="menuitem"
-            aria-label="{{ page.name }}" href="{{ page.link | relative_url }}" title="{{ page.name }}">{{ page.imagen }}
+            aria-label="Página de {{ page.name }}" href="{{ page.link | relative_url }}" title="{{ page.name }}">{{ page.imagen }}
             <span>{{ page.name }}</span>
           </a>
         </li>
