--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,7 +15,7 @@ _data/navigation.yml, alli se inovan las variables  -->
         <li itemprop="name" class="nav__item">
           <a itemprop="url" class="nav__link focus--box-shadow fondoNav"
             role="menuitem"
-            aria-label="Página de {{ page.name }}" href="{{ page.link | relative_url }}" title="{{ page.name }}">{{ page.imagen }}
+            aria-label="Página de {{ page.name }}" href="{{ page.link | relative_url }}" title="Ver más de {{ page.name }}">{{ page.imagen }}
             <span>{{ page.name }}</span>
           </a>
         </li>
