--- a/_includes/header.html
+++ b/_includes/header.html
@@ -41,7 +41,7 @@
 					<div class="menu-desktop">
 						<ul class="main-menu" itemscope itemtype="https://schema.org/SiteNavigationElement">
 							<li class="active-menu">
-								<a href="index" itemprop="name url"><svg width="30px" height="30px" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M1 6V15H6V11C6 9.89543 6.89543 9 8 9C9.10457 9 10 9.89543 10 11V15H15V6L8 0L1 6Z" fill="#0062ff"></path> </g></svg>Inicio</a>
+								<a href="/" itemprop="name url"><svg width="30px" height="30px" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M1 6V15H6V11C6 9.89543 6.89543 9 8 9C9.10457 9 10 9.89543 10 11V15H15V6L8 0L1 6Z" fill="#0062ff"></path> </g></svg>Inicio</a>
 								<!--ul class="sub-menu">
 									<li><a href="index">Homepage 1</a></li>
 								</ul-->
@@ -132,7 +132,7 @@
 
 			<ul class="main-menu-m" itemscope itemtype="https://schema.org/SiteNavigationElement">
 				<li itemprop="name url">
-					<a href="/index">Inicio</a>
+					<a href="/">Inicio</a>
 					<!--ul class="sub-menu-m">
 						<li><a href="/index">Homepage 1</a></li>
 						
