Corrección de etiqueta section

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,10 +32,10 @@ layout: default
 <noscript>Por favor activa JavaScript para ver los<a href="https://disqus.com/?ref_noscript"> comentarios patrocinado por Disqus.</a></noscript>
 
 <hr>
-
 {% if page.previous.url %}
   <a href="{{ page.previous.url }}" class="btn btn-primary" role="button" title="{{ page.title }}">Post anterior</a>
 {% endif %}
 {% if page.next.url %}
   <a href="{{ page.next.url }}" class="btn btn-primary" role="button" title="{{ page.title }}">Post siguiente</a>
 {% endif %}
+</section>
