--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: default
     </div>
     <!--/div-->
 <hr>
-<div id="disqus_thread"></div>
+<div id="disqus_thread" style="margin-left:7%;margin-right:7%"></div>
 <script  type="text/plain" data-cookiecategory="necessary" defer>
     var disqus_config = function () {
         this.page.url = "{{ site.url }}{{ page.url }}";
