centro de servicio actualizado truper y agregado de elite

--- a/_includes/contenidoCentrosServicio.html
+++ b/_includes/contenidoCentrosServicio.html
@@ -35,7 +35,7 @@ productos que tenga un documento de compra que acredite que la herramienta se te
       <!--img src="..." class="card-img-top" alt="..."-->
       <div class="card-body">
         <h5 class="card-title">Guatemala</h5>
-        <p class="card-text">27 calle 41-55 zona 5, calzada la paz, bodegas de cemaco, Guatemala, Guatemala.</p>
+        <p class="card-text">6ta avenida 8-25 zona 4, ciudad de Guatemala.</p>
         <a href="https://www.waze.com/es-419/live-map/directions?to=ll.14.620292%2C-90.49269" class="btn btn-primary" target="_blank" rel="noopener noreferrer" aria-label="Abrir ubicación en Waze">Ir con Waze</a>
       </div>
     </div>
@@ -197,13 +197,13 @@ Bodega B, Cobán.</p>
     <div class="accordion-item">
     <h2 class="accordion-header" id="flush-headingFive">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
-       <strong>Bosch, Skil</strong>
+       <strong>Bosch, Skil - Campbell negro</strong>
       </button>
     </h2>
     <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushExample">
       <div class="accordion-body">
       Master Auto Bosch La Terminal<br>
-      <code>Dirección: </code>3 Calle 2-35 Terminal Zona 9<br>
+      <code>Dirección: </code>3 Calle 2-35 Terminal Zona 9, frente a CELASA<br>
       <code>Horario: </code>Lunes a viernes de 8:00 a 17:00 Hrs. Sábado de 8:00 a 13:00 Hrs.<br>
       <code>Teléfono: </code>2234-7477<br>
       <code>¿Más direcciones?</code><br>
@@ -314,8 +314,18 @@ Bodega B, Cobán.</p>
     <div id="flush-collapse13" class="accordion-collapse collapse" aria-labelledby="flush-heading13" data-bs-parent="#accordionFlushExample">
       <div class="accordion-body">
         <code>Dirección: </code>12 calle 26-72 B zona 4 colonia el naranjo.<br>
-        <!--code>Tel&eacute;fono: </code>2506-2900<br>
-        <code>Horario: </code>Lunes a viernes de 08:00 a 17:00pm. Sábado de 08:00 a 12:00 pm<br-->
+      </div>
+    </div>
+  </div>
+    <div class="accordion-item">
+    <h2 class="accordion-header" id="flush-heading14">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse14" aria-expanded="false" aria-controls="flush-collapse14">
+       <strong>ELITE - WONDER - VICTORINOX</strong>
+      </button>
+    </h2>
+    <div id="flush-collapse14" class="accordion-collapse collapse" aria-labelledby="flush-heading14" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body">
+        <code>Dirección: </code>7ma avenida 9-62 zona 1.<br>
       </div>
     </div>
   </div>
