--- a/_includes/contenidoCentrosServicio.html
+++ b/_includes/contenidoCentrosServicio.html
@@ -317,7 +317,7 @@ Bodega B, Cobán.</p>
       </div>
     </div>
   </div>
-    <div class="accordion-item">
+  <div class="accordion-item">
     <h2 class="accordion-header" id="flush-heading14">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse14" aria-expanded="false" aria-controls="flush-collapse14">
        <strong>ELITE - WONDER - VICTORINOX</strong>
@@ -325,11 +325,24 @@ Bodega B, Cobán.</p>
     </h2>
     <div id="flush-collapse14" class="accordion-collapse collapse" aria-labelledby="flush-heading14" data-bs-parent="#accordionFlushExample">
       <div class="accordion-body">
+        <code>Centro de servicio El Globo: </code><br>
         <code>Dirección: </code>7ma avenida 9-62 zona 1.<br>
       </div>
     </div>
   </div>
-
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="flush-heading15">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse15" aria-expanded="false" aria-controls="flush-collapse15">
+       <strong>Vikingo</strong>
+      </button>
+    </h2>
+    <div id="flush-collapse15" class="accordion-collapse collapse" aria-labelledby="flush-heading15" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body">
+        <code>Centro de servicio Vikingo: </code><br>
+        <code>Dirección: </code>Comercial Escobar Portillo 13 avenida 3-12 zona 19 colonia la florida. Tel: 2328-69<br>
+      </div>
+    </div>
+  </div>
 </div>
             <!-- fin codigo centro de servicio-->
 		</div>
