--- a/_includes/contenidoCentrosServicio.html
+++ b/_includes/contenidoCentrosServicio.html
@@ -313,14 +313,14 @@ Bodega B, Cobán.</p>
     </h2>
     <div id="flush-collapse13" class="accordion-collapse collapse" aria-labelledby="flush-heading13" data-bs-parent="#accordionFlushExample">
       <div class="accordion-body">
-        <code>Dirección: </code>12 calle 26-72 B zona 4 colonia el naranjo.<br>
+        <code>Dirección: </code>POWER TECH S.A. Km 28.5 carretera a El Salvador, Condominio Logística Santa Elena, Bodega #8 - 9 Villa Canales, Guatemala 01065<br>
       </div>
     </div>
   </div>
   <div class="accordion-item">
     <h2 class="accordion-header" id="flush-heading14">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse14" aria-expanded="false" aria-controls="flush-collapse14">
-       <strong>ELITE - WONDER - VICTORINOX</strong>
+       <strong>ELITE - WONDER - VICTORINOX - SWEISS - FURIUS</strong>
       </button>
     </h2>
     <div id="flush-collapse14" class="accordion-collapse collapse" aria-labelledby="flush-heading14" data-bs-parent="#accordionFlushExample">
