--- a/_includes/contenidoCentrosServicio.html
+++ b/_includes/contenidoCentrosServicio.html
@@ -343,6 +343,19 @@ Bodega B, Cobán.</p>
       </div>
     </div>
   </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="flush-heading16">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse16" aria-expanded="false" aria-controls="flush-collapse16">
+       <strong>Lincoln Electric</strong>
+      </button>
+    </h2>
+    <div id="flush-collapse16" class="accordion-collapse collapse" aria-labelledby="flush-heading16" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body">
+        <code>Centro de servicio: TECNO INDUSTRIAL</code><br>
+        <code>Dirección: </code>52 calle 18-86 zona 12complejo ofibodega petapa bodega 5.<br>
+      </div>
+    </div>
+  </div>
 </div>
             <!-- fin codigo centro de servicio-->
 		</div>
